// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo renders a badge component and a code area 1`] = `
<blaze-demo
  class="hydrated"
  code="<blaze-badge type=\\"success\\">YO!</blaze-badge>"
  language="html"
>
  
  <div
    aria-label="Demo component"
    class="demo-markup-source u-letter-box-small undefined"
  >
    <blaze-badge
      type="success"
    >
      YO!
    </blaze-badge>
  </div>
  <div
    class="u-letter-box-small"
  >
    <pre
      class="u-pre"
    >
      <code
        aria-hidden="true"
        class="u-code u-code--multiline html"
        contenteditable="true"
        tabindex="-1"
      >
        &lt;blaze-badge type="success"&gt;YO!&lt;/blaze-badge&gt;
      </code>
    </pre>
  </div>
</blaze-demo>
`;

exports[`Demo renders correctly with no props 1`] = `
<blaze-demo
  class="hydrated"
>
  
  <div
    aria-label="Demo component"
    class="demo-markup-source u-letter-box-small undefined"
  />
  <div
    class="u-letter-box-small"
  >
    <pre
      class="u-pre"
    >
      <code
        aria-hidden="true"
        class="u-code u-code--multiline"
        contenteditable="true"
        tabindex="-1"
      >
        
      </code>
    </pre>
  </div>
</blaze-demo>
`;
